--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       async function sendDwidRequest() {
         try {
-          const response = await fetch('https://api-dwid.digities.dev.tech/api/v1/dwid?source=IFRAME', {
+          const response = await fetch('https://api-dwid.dev.digities.tech/api/v1/dwid?source=IFRAME', {
             method: 'GET',
             credentials: 'include',
             headers: {
